# smart-mirror

./: .dockerignore  .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml
.github/workflows/: ci.yml
config/: gestures.yaml
config/magicmirror/: config.js  custom.css
config/mosquitto/: mosquitto.conf
docs/: architecture.md  mqtt-contract.md  runbook-raspberry-pi.md
scripts/: install-gesture-service.sh  run-gesture-host.sh  run-kiosk.sh  verify.sh
services/gesture-service/: Dockerfile  README.md  pyproject.toml
services/gesture-service/src/gesture_service/: __init__.py  classifier.py  config.py  contracts.py  detector.py  logging_utils.py  main.py  mqtt_client.py  state_machine.py
services/gesture-service/tests/integration/: test_pipeline.py
services/gesture-service/tests/unit/: test_classifier.py  test_config.py  test_contracts.py  test_state_machine.py
services/magicmirror/: Dockerfile
services/mmm-gesture-bridge/: MMM-GestureBridge.js  README.md  module.js  node_helper.js  package-lock.json  package.json  styles.css
services/mmm-gesture-bridge/lib/: action-mapper.js  config-loader.js
services/mmm-gesture-bridge/tests/: action-mapper.test.js  config-loader.test.js
shared/gesture-config/: contract.json
